2015-04-29  Alan Lawrence  <alan.lawrence@arm.com>

	* config/arm/neon.md (vec_shl<mode>, vec_shr<mode>): Remove.

2015-04-29  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/65893
	* passes.def (pass_all_optimizations): Move pass_stdarg to after
	pass_dce.

2015-04-29  Richard Biener  <rguenther@suse.de>

	* tree-vect-data-refs.c (vect_analyze_group_access): Properly
	compute GROUP_SIZE for basic-block SLP.
	* tree-vect-slp.c (vect_get_place_in_interleaving_chain): Properly
	take into account gaps.
	(vect_get_mask_element): Properly reject references to previous
	vectors.
	(vect_transform_slp_perm_load): Likewise.

2015-04-29  Christian Bruel  <christian.bruel@st.com>

	PR target/64835
	* config/i386/i386.c (ix86_default_align): New function.
	(ix86_override_options_after_change): Call ix86_default_align.
	(TARGET_OVERRIDE_OPTIONS_AFTER_CHANGE): New hook.
	(ix86_override_options_after_change): New function.

2015-04-28  Jeff Law  <law@redhat.com>

	* tree-ssa-dom.c (record_equality); Fix comment typos.

2015-04-28  Tom de Vries  <tom@codesourcery.com>

	PR tree-optimization/65887
	* gimplify.c (gimplify_modify_expr): Remove ifn_va_arg ap fixup.

2015-04-28  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/extend.texi (Declaring Attributes of Functions): Split into
	subsections by target.  Alphabetize the table of common attributes.
	Rewrite some of the introductory text to reflect the new structure.
	Update some cross-references to point to the new subsections.
	(Attribute Syntax): Put paragraph about "__" naming here.  Remove
	duplicate copies in the discussion of function, label, and type
	attributes.

2015-04-28  Dominique d'Humieres  <dominiq@lps.ens.fr>

	PR bootstrap/65910
	* varasm.c (assemble_end_function): Guard ASM_DECLARE_FUNCTION_SIZE.

2015-04-28  Jason Merrill  <jason@redhat.com>

	PR c++/65734
	* stor-layout.c (layout_type): Layout the TYPE_MAIN_VARIANT.
	(finalize_type_size): Respect TYPE_USER_ALIGN.